// wear_calendar.proto

syntax = "proto2";

import "nanopb.proto";

option java_package = "com.xiaomi.wear.protobuf";
option java_outer_classname = "CalendarProtos";

message Calendar {
    enum CalendarID {
        SYNC_CALENDAR_INFO = 0x00;
        SYNC_CALENDAR_INFO_LIST = 0x01;
        WEAR_REQUEST = 0x02;
    }

    oneof payload {
        CalendarInfo calendar_info = 1;
        CalendarInfo.List calendar_info_list = 2;
    }
}

message CalendarInfo {
    required string title = 1 [(nanopb).type = FT_POINTER];
    required string description = 2 [(nanopb).type = FT_POINTER];
    required string location = 3 [(nanopb).type = FT_POINTER];
    required uint32 start = 4;
    required uint32 end = 5;
    required bool all_day = 6;
    required int32 reminder_minutes = 7;

    message List {
        repeated CalendarInfo list = 1 [(nanopb).type = FT_POINTER];
    }
}